# ACS_HW_5_Bobruskina_Stanislava_207

HW_5/: CMakeLists.txt  declaration.h  main.c
